chore: updated configs

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:EasA7DEo7MKUcA==,iv:hmAZvq2oDFjTbcUGnZ/6mN3/GRhJa32nnr4Fytm1k/Y=,tag:nH0HcB4Lq7jjUXImrYjOiw==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:hHR14xIzEsOmjw==,iv:GL7lm723YIShp0CcrF+CbhLRY1OaRN4E2R8c7JELFqE=,tag:fUK/LyHiIgfzhoAMxbFIVg==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age16gw89qfpfpnvx5q0kac6443khe9mywxwn4qamd8szuludd7hzaqqu5a5hx
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWcDhDNCs5TEJwdUp6VGwz
-        OW5YTFlmcGFVVkpNckZRN01yOG5COHhkeWlvCmVYU21BditncEFJaTRUWEtKTjNG
-        YkpHZ2t5SUdCN0dxdnQ1U2pXaGpGc00KLS0tIHZ2ZnVxa2ZHeVBTRklrQ3I4WnVj
-        NDEwRVRQQ1VjQlVpeHQ3Z3Y2UWtGY2sKT8DKIQ7RzVD2qYZ9xMxDdgeCh1GrL6bz
-        dnjovRUFI1WHkafQKjMq7YUFKJP/5SsAf5H8TGYy5PvjakY6j9jTwQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKcHFJZWFPOTl4a1JsNG1Y
+        Vm01ZmlaRmtLTlo0S1hSRXBuSXVhdElNWTNvCmI1eXZtakV0QTUxMmd0WXNiSTM1
+        bFh3Zzl2cnFWL2ZIbnNrRk94NE9WWWcKLS0tIDBlNjd1dmpuWUIzMXAxUE1WK0Fz
+        ZmZXdmh3TkQ0ZDZyZjJVUHo3K3ZjR1EKimyzyoLRlEbTYasKdVowK4KuWJRXdNnk
+        aeGJtOKlf9BaiyjFMd2TYNTWoS6ElPX8YoAmr2ptTAnmmWM8d43pbQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-03-11T16:51:35Z"
-  mac: ENC[AES256_GCM,data:VvStDxJvC9SlAyX5ONoQgdB4OUlpeR8RfcRKb7gKvm9JoETg9TgXtSX/VrQA9RnO4HZSWaI3PYsuLKvGb24aCqKVeOp+tYPeoBVW6utFK9MVeq5/bni/HqoNyhMXx9RNfuEKWfa/PDvPqlBP10VGNLQ4YBboLDLb3ObLb55mHy8=,iv:eAcpBqqBICLC5O1lKOPkzEsRKA8zZ+p0XiU95gS86Os=,tag:0YdRJdGNPFkp/h+J3YmEkg==,type:str]
+  lastmodified: "2025-03-11T18:09:12Z"
+  mac: ENC[AES256_GCM,data:FT3SOO1gdOK3fydKcCu20CP0XAM6dDyUgO2gzOmCNoNb5JlJZBUS10xBvd+Rpzc2eWrwEw7e2dFwGzEU1vrovqr7gxtu1I0tSdOViHRCVk8CVmL+I1/etOkmUUbwHB5y9UnDwXo5MpmRMT3kz8ishbDW5NRQEp9iQtF87WGrj4E=,iv:LGoUIP0Yfwlzu9LeDnwCRFOeS4e6K4c6UQw+VNlX2lc=,tag:bQVwgCVrqLuUWOCKu9tgzg==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
